use svg icon for ORCID iD links

--- a/src/resources/formats/html/templates/title-block.scss
+++ b/src/resources/formats/html/templates/title-block.scss
@@ -158,7 +158,7 @@ main.quarto-banner-title-block > section:first-child > h4 {
   }
 
   .quarto-title-author-orcid {
-    img {
+    svg {
       margin-top: -0.2em;
       height: 0.8em;
       width: 0.8em;
